--- a/css/info.css
+++ b/css/info.css
@@ -189,15 +189,15 @@ img {
 }
 
 .container .btn img {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height:20px;
 }
 
 .cart {
-  font-size: 1.25rem;
+  font-size: 1rem;
   color: white;
   font-weight: 520;
-  padding:0.2rem;
+  padding:0.5rem;
 }
 
 /* Desktop ver. */
@@ -211,7 +211,9 @@ img {
   .container article:last-child {
     padding: 12px;
   }
-  img {
+
+
+  .column img {
     border-radius: 100%;
     padding: 8px;
   }
@@ -224,5 +226,10 @@ img {
   .container .btn img {
     width: 50px;
     height: 50px;
+  }
+
+  .container .btn img {
+    width: 20px;
+    height:20px;
   }
 }
